<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Animation.Design.BottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@null"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/rounded_edt"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Contact details"
            android:textAllCaps="true"
            android:textColor="#000"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/normal_grey" />

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter Contact Names"
            android:textColor="#000" />

        <EditText
            android:id="@+id/etSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edt"
            android:hint="Surname"
            android:inputType="text"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <EditText
                android:id="@+id/etFName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edt"
                android:hint="@string/first_name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp" />

            <EditText
                android:id="@+id/etSecName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_edt"
                android:gravity="center"
                android:hint="@string/middle_name"
                android:inputType="text"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="5dp"
                android:paddingBottom="10dp" />

        </LinearLayout>

        <TextView
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enter their Phone Number"
            android:textColor="#000" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_edt"
            android:hint="Phone number"
            android:inputType="phone"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:weightSum="2">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:background="@drawable/cancel_button"
                android:text="@string/cancel"
                android:textColor="#FFF" />

            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/circular_button"
                android:text="@string/submit"
                android:textColor="#FFF" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>